Fix font size hour display on small screen (4)

--- a/styles.css
+++ b/styles.css
@@ -78,7 +78,7 @@ body {
 @media screen and (max-width: 528px) {
 
     .wrapper-grid .hour {
-        font-size: 2.6rem;
+        font-size: 2.8rem;
     }
 
     .wrapper-grid .format-wrapper {
@@ -91,12 +91,12 @@ body {
 
 
     .wrapper-grid .format-wrapper .format {
-        font-size: 1.3rem;
+        font-size: 1.2rem;
         padding: 0;
     }
 
     .wrapper-grid .days-wrapper .day {
-        font-size: 1.3rem;
+        font-size: 1.2rem;
         padding: 0;
         display: none;
     }
